# Elchcraft

./: .gitmodules  CMakeLists.txt  README.md
common/include/: loadable.h  loadhandler.h
common/src/: loadhandler.cpp
elchcraft/res/3ddata/: cube.mtl  mini.mtl
elchcraft/res/shader/: main.frag  main.vert
elchcraft/src/: main.cpp
graphics/include/: object.h  objectarray.h  objecttriangle.h  objectwavefront.h  rendertarget.h  rendertargetwindow.h  scene.h  shader.h
graphics/src/: objectwavefront.cpp  rendertargetwindow.cpp  scene.cpp
